2009-05-06  Martin Leidig  <mleidig@schlund.de>

	Fixed NPE when unconfigured page is called with action parameter.

2009-05-06  Martin Leidig  <mleidig@schlund.de>

	Fixed timer problem in SessionCleaner (reset timer after it was
	cancelled due to exception or error thrown by task or JVM).

2009-04-30  Martin Leidig  <mleidig@schlund.de>

	Added ETag, Last-Modified, Content-Length header support to static
	resource delivery.

2009-04-23  Sebastian Marsching <sebastian.marsching@1und1.de>

	Removed references to projects.xml and factory.xml from editor code.

2009-04-22  Martin Leidig  <mleidig@schlund.de>

	Moved Pustefix webservice plugin in build process from process-classes 
	to compile phase. Thus it also works with 'mvn tomcat:run'.
	Added wsdl and wsscript directories to the default static resource
	delivery path list.

2009-04-22  Martin Leidig  <mleidig@schlund.de>

	Changed delivery of static resources: Only allow access to resources
	under a static path configured in project.xml. By default restrict
	access to resources in the webapp root directory.
	Still to do: DocrootRequestHandler has to set additional HTTP headers
	for caching. Remove htdocs fallback.

2009-04-22  Martin Leidig  <mleidig@schlund.de>

	Fixed NPE in TransformerCallback occurring when DOM view is called for
	page without config.

	Fixed WSDL view for webservices.

2009-04-22  Martin Leidig  <mleidig@schlund.de>

	Added support for running webapps from the source directory using
	'mvn tomcat:run'.
	Running from source means that src/main/webapp is used as docroot, but
	resources like the extracted core and module files and the
	buildtime.prop file are located in the target directory. Pustefix now
	is able to load these resources anyway by using the target artifact
	directory as an alternative fallback docroot when running from source.
	Running a webapp from source enables Pustefix to immediately reload
	changed resources without having to do a rebuild with maven.
