@@ -7,6 +7,12 @@
 	Fixed timer problem in SessionCleaner (reset timer after it was
 	cancelled due to exception or error thrown by task or JVM).
 
+2009-05-04  Martin Leidig  <mleidig@schlund.de>
+
+	Fixed JMX bean naming in war-mode (use project name from project.xml
+	instead of name derived from URI to project.xml to register JMX
+	beans).
+
 2009-04-30  Martin Leidig  <mleidig@schlund.de>
 
 	Added ETag, Last-Modified, Content-Length header support to static
